feat: added experimental configuration